# hms-av-pipeline-demo

./: README.md  README_ZH.md
cpp/: README.md  README_ZH.md  settings.gradle
cpp/app/: build.gradle
cpp/app/src/androidTest/java/com/example/usemediafilter/: ExampleInstrumentedTest.java
cpp/app/src/main/: AndroidManifest.xml
cpp/app/src/main/assets/: SedPipeline.xml  alg.pcm  sed.om
cpp/app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
cpp/app/src/main/cpp/include/base/: BaseMacros.h  CheckMacros.h  HolderBase.h  Log.h  MMAudio.h  MMListener.h  MediaAttrStr.h  MediaBuffer.h  MediaErrors.h  MediaLiteAny.h  MediaMeta.h  MediaParcel.h  MsgQueueThread.h  SimplePool.h
cpp/app/src/main/cpp/include/core/: Clock.h  ClockCore.h  FilterNode.h  INode.h  IPipeline.h  MediaFilter.h  MediaPlayer.h  NodeBase.h  NodeUtils.h  PipelineBase.h  Reader.h  SinkNode.h  SourceNode.h  Writer.h
cpp/app/src/main/java/com/example/usemediafilter/: MainActivity.java
cpp/app/src/main/res/values/: strings.xml  themes.xml
cpp/app/src/main/res/values-night/: themes.xml
cpp/app/src/test/java/com/example/usemediafilter/: ExampleUnitTest.java
cpp/gradle/wrapper/: gradle-wrapper.properties
java/: README.md  README_ZH.md  build.gradle  settings.gradle
java/app/: build.gradle
java/app/src/main/: AndroidManifest.xml
java/app/src/main/java/com/huawei/hms/avpipeline/sample/: AssetActivity.java  (+6 more)
java/app/src/main/res/layout/: activity_asset.xml  activity_main.xml  activity_player.xml
java/app/src/main/res/values/: strings.xml
java/gradle/wrapper/: gradle-wrapper.properties
